tests/rascal/negative/type_errors/L1/13_expression_ES10_D4_7.ob
MODULE Test13;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := ((y <= 2) OR r);
               q := (p & p);
  (* error *)  r := ((+ ((r DIV 0) DIV (0 * 0))) > (((2 MOD 1223) * (x - 200)) MOD (+ (200 + 0))));
               r := ((+ z) = y);
               p := r;
               x := (- (200 MOD 200));
               x := (x MOD 1);
               q := (~ (p & ((r & q) OR (200 > 1223))));
               q := q;
               y := (x MOD (0 * y))
END Test13.